--- a/eTools Ultimate/Views/Pages/Collector/CollectorPage.xaml
+++ b/eTools Ultimate/Views/Pages/Collector/CollectorPage.xaml
@@ -91,7 +91,7 @@
                                 Icon="{ui:SymbolIcon Add24}"/>
                         </Grid>
                         
-                        <!-- DataGrid für Items -->
+                        <!-- DataGrid for Items -->
                         <ui:DataGrid 
                             Grid.Row="2"
                             ItemsSource="{Binding CollectingItems}" 
