--- a/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
@@ -28,15 +28,17 @@
                      HorizontalScrollBarVisibility="Disabled" 
                      Padding="0,0,18,0">
             <StackPanel Margin="12,8,12,20">
-                <!-- Tooltip for main settings -->
-                <ui:ToolTip Content="Main Settings" Title="Settings">
-                    <ui:SymbolIcon
-                        FontSize="14"
-                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                        Symbol="Info24" />
-                </ui:ToolTip>
+                <!-- Tooltip für Haupteinstellungen -->
+                <ui:CardControl Margin="0,10,0,10">
+                    <ui:CardControl.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <ui:SymbolIcon Symbol="Info20" Margin="0,0,8,0" OpacityMask="#FF0948DE"/>
+                            <TextBlock TextWrapping="Wrap" Text="Set the path for resource files in a typical Flyff setup."/>
+                        </StackPanel>
+                    </ui:CardControl.Header>
+                </ui:CardControl>
 
-                <!-- Grid with 2x4 layout for main settings -->
+                <!-- Grid mit 2x4 Layout für die Haupteinstellungen -->
                 <Grid Margin="0,10,0,12">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -113,13 +115,15 @@
 
                 <!-- Advanced Settings Sections -->
                 <StackPanel Visibility="{Binding IsAdvancedSettingsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
-                    <!-- Tooltip for advanced settings -->
-                    <ui:ToolTip Content="Advanced Settings" Title="Settings">
-                        <ui:SymbolIcon
-                            FontSize="14"
-                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                            Symbol="Info24" />
-                    </ui:ToolTip>
+                    <!-- Tooltip für erweiterte Einstellungen -->
+                    <ui:CardControl Margin="0,10,0,10">
+                        <ui:CardControl.Header>
+                            <StackPanel Orientation="Horizontal">
+                                <ui:SymbolIcon Symbol="Info20" Margin="0,0,8,0"/>
+                                <TextBlock TextWrapping="Wrap" Text="Set the path when using a custom structure."/>
+                            </StackPanel>
+                        </ui:CardControl.Header>
+                    </ui:CardControl>
 
                     <!-- Custom Section -->
                     <ui:TextBlock Text="Custom" FontSize="16" Margin="0,10,0,0" FontWeight="Bold"/>
@@ -443,7 +447,7 @@
                             </Button>
                         </Grid>
 
-                        <!-- Checkboxes for PropMoverEx -->
+                        <!-- Checkboxes für PropMoverEx -->
                         <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,0,0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
