--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -5,7 +5,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages.Motion"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:models="clr-namespace:eTools_Ultimate.Models.Motions"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
@@ -16,7 +15,8 @@
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     ScrollViewer.CanContentScroll="False"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance local:MotionPage,IsDesignTimeCreatable=False}">
 
     <Page.Resources>
         <!-- Standard Converter -->
@@ -238,14 +238,14 @@
                         Margin="0,0,8,0">
                     <Image Stretch="Uniform"
                             Margin="2"
-                            Source="{Binding MotionIconImage}"/>
+                            Source="{Binding Icon}"/>
                 </Border>
                 <StackPanel Grid.Column="1"
                         VerticalAlignment="Center">
-                    <TextBlock Text="{Binding InGameName}"
+                    <TextBlock Text="{Binding Name}"
                             FontWeight="SemiBold"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
-                    <TextBlock Text="{Binding MotionId}"
+                    <TextBlock Text="{Binding DwId}"
                             Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                             FontSize="12"/>
                 </StackPanel>
@@ -298,7 +298,6 @@
                             ItemTemplate="{StaticResource MotionListTemplate}"
                             SelectionChanged="MotionsListView_SelectionChanged"
                             ItemsSource="{Binding ViewModel.MotionsView}"
-                            SelectedItem="{Binding ViewModel.SelectedMotion, Mode=TwoWay}"
                             IsSynchronizedWithCurrentItem="True">
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
