--- a/eTools Ultimate/Views/Pages/TextClient/TextClientPage.xaml
+++ b/eTools Ultimate/Views/Pages/TextClient/TextClientPage.xaml
@@ -158,7 +158,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <!-- Header mit Add/Delete Buttons -->
+            <!-- Header with Add/Delete Buttons -->
             <Grid Grid.Row="0" Margin="0,0,0,20">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
