--- a/eTools Ultimate/Views/Pages/Accessory/AccessoryPage.xaml
+++ b/eTools Ultimate/Views/Pages/Accessory/AccessoryPage.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages.Accessory"
-    xmlns:models="clr-namespace:eTools_Ultimate.Models.Accessory"
     xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -120,7 +119,8 @@
                 </Grid.ColumnDefinitions>
                 <ui:TextBox Grid.Column="0"
                             PlaceholderText="Search accessories..."
-                            Icon="Search24"/>
+                            Icon="Search24"
+                            Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </Grid>
 
             <!-- Accessory List -->
@@ -132,6 +132,7 @@
                     Margin="5,5,15,5">
                 <ListView x:Name="AccessoriesListView"
                           Style="{StaticResource AppListViewStyle}"
+                          ItemsSource="{Binding ViewModel.AccessoriesView}"
                           BorderThickness="0"
                           Background="Transparent"
                           SelectedIndex="0">
@@ -143,15 +144,35 @@
                                     Value="0,1" />
                         </Style>
                     </ListView.ItemContainerStyle>
-
-                    <ListViewItem>II_GEN_JEW_RIN_STRRING</ListViewItem>
-                    <ListViewItem>II_GEN_JEW_RIN_STARING</ListViewItem>
-                    <ListViewItem>II_GEN_JEW_RIN_DEXRING</ListViewItem>
-                    <ListViewItem>II_GEN_JEW_RIN_INTRING</ListViewItem>
-                    <ListViewItem>II_GEN_JEW_EAR_ATTEARRING</ListViewItem>
-                    <ListViewItem>II_GEN_JEW_EAR_DEFEARRING</ListViewItem>
-                    <ListViewItem>II_GEN_JEW_NEC_HPNECKLACE</ListViewItem>
-                    <ListViewItem>II_GEN_JEW_NEC_MPNECKLACE</ListViewItem>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="4">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Border Width="32"
+                                        Height="32"
+                                        Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                                        BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                                        BorderThickness="1"
+                                        Margin="0,0,8,0">
+                                    <Image Stretch="Uniform"
+                                           Margin="2"
+                                           Source="{Binding Item.Icon}"/>
+                                </Border>
+                                <StackPanel Grid.Column="1"
+                                            VerticalAlignment="Center">
+                                    <TextBlock Text="{Binding Item.Name}"
+                                               FontWeight="SemiBold"
+                                               Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
+                                    <TextBlock Text="{Binding Item.Id}"
+                                               Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                               FontSize="12"/>
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
                 </ListView>
             </Border>
         </Grid>
@@ -182,9 +203,15 @@
                     <TextBlock
                         FontSize="24"
                         FontWeight="Bold"
-                        Text="II_GEN_JEW_RIN_STRRING" />
-                    <TextBlock
-                        Text="Strength Ring - Increases character's strength" />
+                        Text="{Binding SelectedItem.Item.Id, Mode=OneWay, ElementName=AccessoriesListView}" />
+                    <TextBlock>
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0} - {1}">
+                                <Binding Path="SelectedItem.Item.Name" ElementName="AccessoriesListView" />
+                                <Binding Path="SelectedItem.Item.Description" ElementName="AccessoriesListView" />
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
                 </StackPanel>
 
                 <!-- Accessory Actions -->
@@ -193,12 +220,13 @@
                         Margin="0,0,8,0"
                         Appearance="Secondary"
                         Icon="Add24"
-                        Content="New Level" />
+                        Content="New Level"
+                        Command="{Binding DataContext.AddAbilityOptionDataCommand, RelativeSource={RelativeSource AncestorType=Page}}"/>
                 </StackPanel>
 
                 <!-- Accessory Stats - Card View -->
-                <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
-                    <ItemsControl ItemsSource="{Binding AccessoryLevels}">
+                <ScrollViewer x:Name="AccessoryScrollViewer" Grid.Row="2" VerticalScrollBarVisibility="Auto">
+                    <ItemsControl ItemsSource="{Binding SelectedItem.AbilityOptionData, Mode=OneWay, ElementName=AccessoriesListView}">
                         <!-- Single column layout -->
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
@@ -208,27 +236,27 @@
                                     CornerRadius="6"
                                     Margin="0,0,0,12"
                                     Padding="16">
-                                    <Grid>
+                                    <Grid Tag="{Binding}">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto"/>
                                             <RowDefinition Height="Auto"/>
                                             <RowDefinition Height="Auto"/>
                                         </Grid.RowDefinitions>
-                                        
+
                                         <!-- Level Header with Actions -->
                                         <Grid Grid.Row="0" Margin="0,0,0,8">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="*" />
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
-                                            
+
                                             <TextBlock 
                                                 Grid.Column="0"
-                                                Text="{Binding LevelDisplay, StringFormat='Level {0}'}"
+                                                Text="{Binding NAbilityOption, StringFormat='Level {0}'}"
                                                 FontSize="18"
                                                 FontWeight="SemiBold"
                                                 VerticalAlignment="Center" />
-                                                    
+
                                             <StackPanel Grid.Column="1" Orientation="Horizontal">
                                                 <!-- Delete with Confirmation -->
                                                 <ui:Button
@@ -236,7 +264,7 @@
                                                     Padding="6,2"
                                                     ToolTip="Delete Level"
                                                     Appearance="Danger"
-                                                    Command="{Binding DataContext.DeleteWithConfirmationCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                                    Command="{Binding DataContext.DeleteAbilityOptionDataCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                                     CommandParameter="{Binding}">
                                                     <Grid>
                                                         <ui:SymbolIcon Symbol="Delete24" />
@@ -244,9 +272,9 @@
                                                 </ui:Button>
                                             </StackPanel>
                                         </Grid>
-                                        
+
                                         <!-- Attributes -->
-                                        <ItemsControl Grid.Row="1" ItemsSource="{Binding Attributes}">
+                                        <ItemsControl Grid.Row="1" ItemsSource="{Binding DstData}">
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
                                                     <Grid Margin="0,6">
@@ -255,23 +283,23 @@
                                                             <ColumnDefinition Width="180" />
                                                             <ColumnDefinition Width="Auto" />
                                                         </Grid.ColumnDefinitions>
-                                                        
+
                                                         <!-- Attribute Dropdown -->
                                                         <ComboBox 
                                                             Grid.Column="0"
                                                             Margin="0,0,12,0"
                                                             FontSize="14"
                                                             Style="{StaticResource AppComboBoxStyle}"
-                                                            SelectedItem="{Binding AttributeName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                            ItemsSource="{Binding DataContext.AttributeTypes, RelativeSource={RelativeSource AncestorType=Page}}" />
-                                                        
+                                                            SelectedItem="{Binding NDst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                            ItemsSource="{Binding ViewModel.PossibleDstValues, RelativeSource={RelativeSource AncestorType=Page}}" />
+
                                                         <!-- Value Input mit manueller Eingabe und Pfeilen -->
                                                         <Grid Grid.Column="1" Margin="0,0,8,0">
                                                             <Grid.ColumnDefinitions>
                                                                 <ColumnDefinition Width="*"/>
                                                                 <ColumnDefinition Width="Auto"/>
                                                             </Grid.ColumnDefinitions>
-                                                            
+
                                                             <!-- Editierbare Textbox -->
                                                             <TextBox 
                                                                 Name="ValueTextBox"
@@ -280,15 +308,14 @@
                                                                 HorizontalContentAlignment="Right"
                                                                 VerticalContentAlignment="Center"
                                                                 FontSize="14"
-                                                                Text="{Binding FormattedValue, Mode=OneWay}"
-                                                                TextChanged="TextBox_TextChanged">
+                                                                Text="{Binding NAdj, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                                                 <TextBox.InputBindings>
                                                                     <KeyBinding Key="Return" 
                                                                                Command="{Binding DataContext.UpdateValueCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                                                                CommandParameter="{Binding}"/>
                                                                 </TextBox.InputBindings>
                                                             </TextBox>
-                                                            
+
                                                             <!-- Spinner-Knöpfe -->
                                                             <StackPanel Grid.Column="1" Orientation="Vertical" Width="24" Margin="2,0,0,0">
                                                                 <Button 
@@ -311,7 +338,7 @@
                                                                     CommandParameter="{Binding}"/>
                                                             </StackPanel>
                                                         </Grid>
-                                                        
+
                                                         <!-- Delete Attribute Button -->
                                                         <Button 
                                                             Grid.Column="2"
@@ -319,7 +346,7 @@
                                                             Style="{StaticResource AppButtonStyle}"
                                                             BorderThickness="1"
                                                             Visibility="{Binding CanDelete, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                                            Command="{Binding DataContext.RemoveAttributeCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                                            Command="{Binding DataContext.DeleteDstDataCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                                             CommandParameter="{Binding}">
                                                             <TextBlock Text="❌" FontSize="12" />
                                                         </Button>
@@ -327,14 +354,14 @@
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
                                         </ItemsControl>
-                                        
+
                                         <!-- Add Attribute Button -->
                                         <Button 
                                             Grid.Row="2" 
                                             Margin="0,8,0,0"
                                             Style="{StaticResource AppButtonStyle}"
                                             HorizontalAlignment="Left"
-                                            Command="{Binding DataContext.AddAttributeCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                            Command="{Binding DataContext.AddDstDataCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                             CommandParameter="{Binding}">
                                             <StackPanel Orientation="Horizontal">
                                                 <TextBlock Text="➕" FontSize="12" VerticalAlignment="Center" />
@@ -349,5 +376,6 @@
                 </ScrollViewer>
             </Grid>
         </Border>
+        <ContentPresenter Grid.Column="0" Grid.ColumnSpan="3" x:Name="RootContentDialogPresenter" />
     </Grid>
 </Page>
