--- a/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
+++ b/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
@@ -113,20 +113,25 @@
             </Grid.RowDefinitions>
 
             <!-- Search Bar -->
-            <ui:TextBox 
-                Grid.Row="0"
-                PlaceholderText="Search giftbox..." 
-                Icon="Search24"
-                Margin="5,5,15,10"
-                Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <Border Grid.Row="0"
+                    BorderThickness="1,1,1,0"
+                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                    Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                    Margin="0,0,10,0">
+                <ui:TextBox 
+                            PlaceholderText="Suche..."
+                            Icon="Search24"
+                            BorderThickness="0"
+                            Margin="10,10,10,10"
+                            Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </Border>
 
             <!-- Giftbox List -->
             <Border Grid.Row="1"
-                    CornerRadius="8"
-                    BorderThickness="1"
+                    BorderThickness="1,0,1,1"
                     BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                     Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                    Margin="5,0,15,5">
+                    Margin="0,0,10,0">
                 <ListView 
                     x:Name="GiftboxListView"
                     BorderThickness="0"
@@ -156,10 +161,22 @@
 
         <!-- Separator -->
         <GridSplitter Grid.Column="1"
-                      Width="5"
+                      Width="10"
                       HorizontalAlignment="Center"
                       VerticalAlignment="Stretch"
-                      Background="{DynamicResource ControlElevationBorderBrush}"/>
+                      Background="Transparent">
+            <GridSplitter.Template>
+                <ControlTemplate TargetType="{x:Type GridSplitter}">
+                    <Grid Background="Transparent">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                            <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                            <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                        </StackPanel>
+                    </Grid>
+                </ControlTemplate>
+            </GridSplitter.Template>
+        </GridSplitter>
 
         <!-- Right Side - DataGrid -->
         <Grid Grid.Column="2" Margin="15">
@@ -175,6 +192,10 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
                 <ui:TextBlock 
@@ -188,9 +209,34 @@
 
                 <ui:Button 
                     Grid.Column="1"
+                    ToolTip="Undo">
+                    <ui:SymbolIcon Symbol="ArrowUndo24"/>
+                </ui:Button>
+
+                <ui:Button 
+                    Grid.Column="2"
+                    Margin="10,0,10,0"
+                    ToolTip="Redo">
+                    <ui:SymbolIcon Symbol="ArrowRedo24"/>
+                </ui:Button>
+
+                <ui:Button 
+                    Grid.Column="3"
+                    Content="Save" 
+                    Margin="0,0,10,0"/>
+
+                <ui:Button 
+                    Grid.Column="4"
+                    Content="Expert" 
+                    Icon="Settings24"
+                    Appearance="Secondary" 
+                    Margin="0,0,10,0"/>
+
+                <ui:Button 
+                    Grid.Column="5"
                     Content="Add Item"
                     Icon="Add24"
-                    Appearance="Primary" />
+                    Background="#2F70AF" />
             </Grid>
 
             <!-- Box Info with Info Icon -->
