--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -274,24 +274,25 @@
                 </Grid.RowDefinitions>
 
                 <!-- Search Bar -->
-                <Grid Grid.Row="0"
-                        Margin="5,5,15,5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <ui:TextBox Grid.Column="0"
-                                PlaceholderText="Search motions..."
+                <Border Grid.Row="0"
+                        BorderThickness="1,1,1,0"
+                        BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                        Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                        Margin="0,0,10,0">
+                    <ui:TextBox 
+                                PlaceholderText="Suche..."
                                 Icon="Search24"
+                                BorderThickness="0"
+                                Margin="10,10,10,10"
                                 Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                </Grid>
+                </Border>
 
                 <!-- Motion List -->
                 <Border Grid.Row="1"
-                        CornerRadius="8"
-                        BorderThickness="1"
+                        BorderThickness="1,0,1,1"
                         BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                         Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                        Margin="5,5,15,5">
+                        Margin="0,0,10,0">
                     <ListView x:Name="MotionsListView"
                             BorderThickness="0"
                             Background="Transparent"
@@ -327,10 +328,22 @@
 
             <!-- Separator -->
             <GridSplitter Grid.Column="1"
-                        Width="5"
+                        Width="10"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Stretch"
-                        Background="{DynamicResource ControlElevationBorderBrush}"/>
+                        Background="Transparent">
+                <GridSplitter.Template>
+                    <ControlTemplate TargetType="{x:Type GridSplitter}">
+                        <Grid Background="Transparent">
+                            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                                <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                                <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                            </StackPanel>
+                        </Grid>
+                    </ControlTemplate>
+                </GridSplitter.Template>
+            </GridSplitter>
 
             <!-- Right Side - Form -->
             <ScrollViewer Grid.Column="2"
@@ -342,19 +355,32 @@
                             VerticalAlignment="Top"
                             Margin="0,10,20,0"
                             ZIndex="1">
-                        <ui:Button x:Name="AddButton" 
-                                Content="New" 
-                                Appearance="Primary"
-                                Margin="0,0,10,0"
-                                Click="AddButton_Click"/>
+                        <ui:Button
+                                ToolTip="Undo">
+                            <ui:SymbolIcon Symbol="ArrowUndo24"/>
+                        </ui:Button>
+                        <ui:Button
+                                Margin="10,0,10,0"
+                                ToolTip="Redo">
+                            <ui:SymbolIcon Symbol="ArrowRedo24"/>
+                        </ui:Button>
                         <ui:Button x:Name="SaveButton" 
                                 Content="Save" 
-                                Appearance="Secondary"
                                 Margin="0,0,10,0"
                                 Click="SaveButton_Click"/>
+                        <ui:Button x:Name="ExpertButton" 
+                                Content="Expert" 
+                                Appearance="Secondary"
+                                Margin="0,0,10,0"/>
+                        <ui:Button x:Name="AddButton" 
+                                Content="Add" 
+                                Appearance="Primary"
+                                Margin="0,0,10,0"
+                                Background="#2F70AF"
+                                Click="AddButton_Click"/>
                         <ui:Button x:Name="DeleteButton" 
                                 Content="Delete" 
-                                Appearance="Danger"
+                                Background="#FD292F"
                                 Click="DeleteButton_Click"/>
                     </StackPanel>
 
