--- a/eTools Ultimate/Views/Pages/Npc/NpcPage.xaml
+++ b/eTools Ultimate/Views/Pages/Npc/NpcPage.xaml
@@ -74,20 +74,25 @@
                 </Grid.RowDefinitions>
                 
                 <!-- Search bar -->
-                <ui:TextBox 
-                    Grid.Row="0" 
-                    PlaceholderText="Search NPC..." 
-                    Margin="5,5,15,10"
-                    Icon="Search24"
-                    Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Cursor="" />
+                <Border Grid.Row="0"
+                        BorderThickness="1,1,1,0"
+                        BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                        Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                        Margin="0,0,10,0">
+                    <ui:TextBox 
+                                PlaceholderText="Suche..."
+                                Icon="Search24"
+                                BorderThickness="0"
+                                Margin="10,10,10,10"
+                                Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Cursor="" />
+                </Border>
                 
                 <!-- ListView for NPC list -->
                 <Border Grid.Row="1"
-                        CornerRadius="8"
-                        BorderThickness="1"
+                        BorderThickness="1,0,1,1"
                         BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                         Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                        Margin="5,0,15,5">
+                        Margin="0,0,10,0">
                     <ListView 
                         BorderThickness="0" 
                         Background="Transparent"
@@ -153,10 +158,22 @@
             <!-- Separator -->
             <GridSplitter Grid.Column="1"
                           Grid.RowSpan="2"
-                          Width="5"
+                          Width="10"
                           HorizontalAlignment="Center"
                           VerticalAlignment="Stretch"
-                          Background="{DynamicResource ControlElevationBorderBrush}"/>
+                          Background="Transparent">
+                <GridSplitter.Template>
+                    <ControlTemplate TargetType="{x:Type GridSplitter}">
+                        <Grid Background="Transparent">
+                            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                                <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                                <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                            </StackPanel>
+                        </Grid>
+                    </ControlTemplate>
+                </GridSplitter.Template>
+            </GridSplitter>
 
         <ScrollViewer Grid.Column="2" Grid.RowSpan="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
             <!-- Right Side: NPC Details with Tabs -->
@@ -171,6 +188,11 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     
                     <TextBlock 
@@ -180,10 +202,42 @@
                         VerticalAlignment="Center"/>
                     
                     <ui:Button 
-                        Grid.Column="1" 
-                        Content="Add Item" 
+                        Grid.Column="1"
+                        ToolTip="Undo">
+                        <ui:SymbolIcon Symbol="ArrowUndo24"/>
+                    </ui:Button>
+                    
+                    <ui:Button 
+                        Grid.Column="2"
+                        Margin="10,0,10,0"
+                        ToolTip="Redo">
+                        <ui:SymbolIcon Symbol="ArrowRedo24"/>
+                    </ui:Button>
+                    
+                    <ui:Button 
+                        Grid.Column="3" 
+                        Content="Save" 
+                        Margin="0,0,10,0"/>
+                    
+                    <ui:Button 
+                        Grid.Column="4" 
+                        Content="Expert" 
+                        Icon="Settings24" 
+                        Appearance="Secondary"
+                        Margin="0,0,10,0"/>
+                    
+                    <ui:Button 
+                        Grid.Column="5" 
+                        Content="Add" 
                         Icon="Add24" 
-                        Appearance="Primary"/>
+                        Background="#2F70AF"
+                        Margin="0,0,10,0"/>
+                    
+                    <ui:Button 
+                        Grid.Column="6" 
+                        Content="Delete" 
+                        Icon="Delete24" 
+                        Background="#FD292F"/>
                 </Grid>
 
                 <!-- Content Section - Removed nested ScrollViewer -->
