--- a/eTools Ultimate/Views/Pages/TextClient/TextClientPage.xaml
+++ b/eTools Ultimate/Views/Pages/TextClient/TextClientPage.xaml
@@ -94,24 +94,25 @@
             </Grid.RowDefinitions>
 
             <!-- Search Bar -->
-            <Grid Grid.Row="0"
-                    Margin="5,5,15,5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <ui:TextBox Grid.Column="0"
-                            PlaceholderText="Search text files..."
+            <Border Grid.Row="0"
+                    BorderThickness="1,1,1,0"
+                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                    Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                    Margin="0,0,10,0">
+                <ui:TextBox 
+                            PlaceholderText="Search..."
                             Icon="Search24"
+                            BorderThickness="0"
+                            Margin="10,10,10,10"
                             Text="{Binding ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            </Grid>
+            </Border>
 
             <!-- Text Files List -->
             <Border Grid.Row="1"
-                    CornerRadius="8"
-                    BorderThickness="1"
+                    BorderThickness="1,0,1,1"
                     BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                     Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                    Margin="5,5,15,5">
+                    Margin="0,0,10,0">
                 <ListView x:Name="TextFilesListView"
                           BorderThickness="0"
                           Background="Transparent"
@@ -146,10 +147,22 @@
 
         <!-- Separator -->
         <GridSplitter Grid.Column="1"
-                      Width="5"
+                      Width="10"
                       HorizontalAlignment="Center"
                       VerticalAlignment="Stretch"
-                      Background="{DynamicResource ControlElevationBorderBrush}"/>
+                      Background="Transparent">
+            <GridSplitter.Template>
+                <ControlTemplate TargetType="{x:Type GridSplitter}">
+                    <Grid Background="Transparent">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                            <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                            <Rectangle Width="2" Height="20" Fill="{DynamicResource TextFillColorSecondaryBrush}" Margin="0,2,0,2"/>
+                        </StackPanel>
+                    </Grid>
+                </ControlTemplate>
+            </GridSplitter.Template>
+        </GridSplitter>
 
         <!-- Right Side - Form -->
         <Grid Grid.Column="2" Margin="15">
@@ -173,16 +186,25 @@
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
                     <ui:Button 
+                        Content="Save" 
+                        Margin="0,0,10,0"
+                        Click="SaveButton_Click"/>
+                    <ui:Button 
+                        Content="Expert" 
+                        Icon="Settings24" 
+                        Appearance="Secondary" 
+                        Margin="0,0,10,0"/>
+                    <ui:Button 
                         Content="Add" 
                         Icon="Add24" 
-                        Appearance="Primary" 
+                        Background="#2F70AF" 
                         Click="AddButton_Click"
                         Margin="0,0,10,0"/>
                     <ui:Button 
                         Content="Delete" 
                         Icon="Delete24"
                         Click="DeleteButton_Click"
-                        Appearance="Danger"/>
+                        Background="#FD292F"/>
                 </StackPanel>
             </Grid>
 
